tests/baselines/reference/parseLinkTag(strict=true).errors.txt
parseLinkTag.ts(2,5): error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
parseLinkTag.ts(5,12): error TS7005: Variable 'x' implicitly has an 'any' type.


==== parseLinkTag.ts (2 errors) ====
    /** trailing @link tag {@link */
    var x;
        ~
!!! error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
    /** @returns trailing @link tag {@link */
    function f() {
        return x
               ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
    }
    